--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     ]
   },
   "dependencies": {
+    "@ssgoi/react": "^2.1.2",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "clsx": "^2.1.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
