--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@/entities/*": ["src/entities/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "src/next-auth.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
