--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "axios": "^1.12.1",
     "clsx": "^2.1.1",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
