--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
+    "rc-slider": "^11.1.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -45,6 +46,7 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/rc-slider": "^9.3.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "husky": "^9.1.7",
