--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "axios": "^1.12.1",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "rc-slider": "^11.1.9",
