--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@ssgoi/react": "^2.1.2",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.85.5",
