fix: change build to turbopack for production

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "biome check --write . && next build",
+    "build": "biome check --write . && next build --turbopack",
     "start": "next start",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
