feat: added level test screen with login integration

--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,12 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noUnknownAtRules": "off"
+        "noUnknownAtRules": "off",
+        "noExplicitAny": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "off",
+        "noUnusedVariables": "off"
       },
       "nursery": {
         "useSortedClasses": {
