refactor: onboarding screen and transition layout

--- a/web/biome.json
+++ b/web/biome.json
@@ -21,7 +21,11 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double"
+      "quoteStyle": "double",
+      "trailingCommas": "all",
+      "arrowParentheses": "always",
+      "bracketSpacing": true,
+      "jsxQuoteStyle": "double"
     }
   }
 }
