--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-toast": "^1.2.15",
     "@ssgoi/react": "^2.1.2",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.85.5",
