--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "rc-slider": "^11.1.9",
